src/objects/Org_Template__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Back_Background_G_B__c</fullName>
        <defaultValue>&quot;rgba(240,240,240,1)&quot;</defaultValue>
        <label>Back Background Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Background_G_T__c</fullName>
        <defaultValue>&quot;rgba(240,240,240,1)&quot;</defaultValue>
        <label>Back Background Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Body_G_B__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Body Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Body_G_T__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Body Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Button_G_B__c</fullName>
        <defaultValue>&quot;rgba(160,160,160,1)&quot;</defaultValue>
        <label>Back Button Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Button_G_T__c</fullName>
        <defaultValue>&quot;rgba(160,160,160,1)&quot;</defaultValue>
        <label>Back Button Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Button_H_G_B__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Button Hover Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Button_H_G_T__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Button Hover Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Footer_G_B__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Footer Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Footer_G_T__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Footer Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Google_Chart_1__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Google Chart 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Google_Chart_2__c</fullName>
        <defaultValue>&quot;rgba(160,160,160,1)&quot;</defaultValue>
        <label>Back Google Chart 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Google_Chart_3__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Google Chart 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Header_B_G_B__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Header Bottom Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Header_B_G_T__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Header Bottom Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Header_Mid_G_B__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Header Mid Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Header_Mid_G_T__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Header Mid Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Header_T_G_B__c</fullName>
        <defaultValue>&quot;rgba(59,61,61,1)&quot;</defaultValue>
        <label>Back Header Top Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Header_T_G_T__c</fullName>
        <defaultValue>&quot;rgba(51,51,51,1)&quot;</defaultValue>
        <label>Back Header Top Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Navigation_Menu_H__c</fullName>
        <defaultValue>&quot;rgba(92,96,96,1)&quot;</defaultValue>
        <label>Back Navigation Menu Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Navigation_Menu__c</fullName>
        <defaultValue>&quot;rgba(74,78,78,1)&quot;</defaultValue>
        <label>Back Navigation Menu</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Page_Block_G_B__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Page Block Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Page_Block_G_T__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Page Block Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Page_Block_Header_G_B__c</fullName>
        <defaultValue>&quot;rgba(37,155,219,1)&quot;</defaultValue>
        <label>Back Page Block Header Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Page_Block_Header_G_T__c</fullName>
        <defaultValue>&quot;rgba(37,155,219,1)&quot;</defaultValue>
        <label>Back Page Block Header Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Page_Block_Table_Even__c</fullName>
        <defaultValue>&quot;rgba(246,246,246,1)&quot;</defaultValue>
        <label>Back Page Block Table Even</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Page_Block_Table_Odd__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Back Page Block Table Odd</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Button_G_B__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Side Button Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Button_G_T__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Side Button Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Button_H_G_B__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Side Button Hover Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Button_H_G_T__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Side Button Hover Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_G_B__c</fullName>
        <defaultValue>&quot;rgba(0,0,0,0.1)&quot;</defaultValue>
        <label>Back Side Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_G_T__c</fullName>
        <defaultValue>&quot;rgba(0,0,0,0.1)&quot;</defaultValue>
        <label>Back Side Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Module_G_B__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,0)&quot;</defaultValue>
        <label>Back Side Module Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Module_G_T__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,0)&quot;</defaultValue>
        <label>Back Side Module Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Module_Header_G_B__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,0)&quot;</defaultValue>
        <label>Back Side Module Header Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side_Module_Header_G_T__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,0)&quot;</defaultValue>
        <label>Back Side Module Header Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Side__c</fullName>
        <defaultValue>&quot;rgba(0,0,0,0)&quot;</defaultValue>
        <label>Back Side</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Tab_A_G_B__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Tab Active Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Tab_A_G_T__c</fullName>
        <defaultValue>&quot;rgba(57,169,229,1)&quot;</defaultValue>
        <label>Back Tab Active Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Tab_G_B__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,0)&quot;</defaultValue>
        <label>Back Tab Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Tab_G_T__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,0)&quot;</defaultValue>
        <label>Back Tab Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Tab_H_G_B__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Tab Hover Gradient Bottom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Tab_H_G_T__c</fullName>
        <defaultValue>&quot;rgba(75,75,75,1)&quot;</defaultValue>
        <label>Back Tab Hover Gradient Top</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Articles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Articles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Charts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Charts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Entitlements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Entitlements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Ideas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Ideas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Component Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Button_H__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Button__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Main__c</fullName>
        <defaultValue>&quot;rgba(51,51,51,1)&quot;</defaultValue>
        <label>Font Colour Main</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Navigation_Menu_H__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Navigation Menu Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Navigation_Menu__c</fullName>
        <defaultValue>&quot;rgba(194,195,195,1)&quot;</defaultValue>
        <label>Font Colour Navigation Menu</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Page_Title__c</fullName>
        <defaultValue>&quot;rgba(51,51,51,1)&quot;</defaultValue>
        <label>Font Colour Page Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Secondary_Title__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Secondary Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Side_Button_H__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Side Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Side_Button__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Side Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Side_Header__c</fullName>
        <defaultValue>&quot;rgba(51,51,51,1)&quot;</defaultValue>
        <label>Font Colour Side Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Small_Information__c</fullName>
        <defaultValue>&quot;rgba(51,51,51,1)&quot;</defaultValue>
        <label>Font Colour Small Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Tab_A__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Tab Active</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Tab_H__c</fullName>
        <defaultValue>&quot;rgba(255,255,255,1)&quot;</defaultValue>
        <label>Font Colour Tab Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Colour_Tab__c</fullName>
        <defaultValue>&quot;rgba(51,51,51,1)&quot;</defaultValue>
        <label>Font Colour Tab</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Button_H__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Button__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Main__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Main</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Navigation_Menu_H__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Navigation Menu Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Navigation_Menu__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Navigation Menu</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Page_Title__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Page Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Secondary_Title__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Secondary Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Side_Button_H__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Side Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Side_Button__c</fullName>
        <defaultValue>&quot;rgba(0,0,0,0)&quot;</defaultValue>
        <label>Font Decoration Side Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Side_Header__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Side Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Small_Information__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Small Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Tab_A__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Tab Active</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Tab_H__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Tab Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Decoration_Tab__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Decoration Tab</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Button_H__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Button__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Main__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Main</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Navigation_Menu_H__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Navigation Menu Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Navigation_Menu__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Navigation Menu</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Page_Title__c</fullName>
        <defaultValue>&quot;26px&quot;</defaultValue>
        <label>Font Size Page Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Secondary_Title__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Secondary Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Side_Button_H__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Side Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Side_Button__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Side Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Side_Header__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Side Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Small_Information__c</fullName>
        <defaultValue>&quot;10px&quot;</defaultValue>
        <label>Font Size Small Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Tab_A__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Tab Active</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Tab_H__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Tab Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Tab__c</fullName>
        <defaultValue>&quot;12px&quot;</defaultValue>
        <label>Font Size Tab</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Button_H__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Button__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Main__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Transform Main</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Navigation_Menu_H__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Transform Navigation Menu Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Navigation_Menu__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Font Transform Navigation Menu</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Page_Title__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Page Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Secondary_Title__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Secondary Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Side_Button_H__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Side Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Side_Button__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Side Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Side_Header__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Side Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Small_Information__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Small Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Tab_A__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Tab Active</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Tab_H__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Tab Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Transform_Tab__c</fullName>
        <defaultValue>&quot;uppercase&quot;</defaultValue>
        <label>Font Transform Tab</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Button_H__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Button__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Main__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Main</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Navigation_Menu_H__c</fullName>
        <defaultValue>&quot;bold&quot;</defaultValue>
        <label>Font Weight Navigation Menu Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Navigation_Menu__c</fullName>
        <defaultValue>&quot;bold&quot;</defaultValue>
        <label>Font Weight Navigation Menu</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Page_Title__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Page Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Secondary_Title__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Secondary Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Side_Button_H__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Side Button Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Side_Button__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Side Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Side_Header__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Side Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Small_Information__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Small Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Tab_A__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Tab Active</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Tab_H__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Tab Hover</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Weight_Tab__c</fullName>
        <defaultValue>&quot;normal&quot;</defaultValue>
        <label>Font Weight Tab</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Background_Image__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalBackground.png&quot;</defaultValue>
        <label>Image Background Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Background_Position__c</fullName>
        <defaultValue>&quot;left top&quot;</defaultValue>
        <label>Image Background Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Background_Repeat__c</fullName>
        <defaultValue>&quot;repeat&quot;</defaultValue>
        <label>Image Background Repeat</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Background__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Image Background</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Body__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalBody.png&quot;</defaultValue>
        <label>Image Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Button_H__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Image Button Hover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Image Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Footer__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalFooter.png&quot;</defaultValue>
        <label>Image Footer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Logo__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalLogo.png&quot;</defaultValue>
        <label>Image Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Page_Block_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Image Page Block Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Slide1__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalSlide1.png&quot;</defaultValue>
        <label>Image Slide1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Slide2__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalSlide2.png&quot;</defaultValue>
        <label>Image Slide2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Slide3__c</fullName>
        <defaultValue>&quot;/resource/SSEPortalResources/images/SSEPortalSlide3.png&quot;</defaultValue>
        <label>Image Slide3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE( Image_Logo__c , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Footer__c</fullName>
        <defaultValue>&quot;show&quot;</defaultValue>
        <label>Position Footer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Page__c</fullName>
        <defaultValue>&quot;new&quot;</defaultValue>
        <label>Position Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Sidebar__c</fullName>
        <defaultValue>&quot;right&quot;</defaultValue>
        <label>Position Sidebar</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Slider__c</fullName>
        <defaultValue>&quot;show&quot;</defaultValue>
        <label>Position Slider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Tabs__c</fullName>
        <defaultValue>&quot;top&quot;</defaultValue>
        <label>Position Tabs</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Button__c</fullName>
        <defaultValue>&quot;1px&quot;</defaultValue>
        <label>Radius Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Page_Block__c</fullName>
        <defaultValue>&quot;0px&quot;</defaultValue>
        <label>Radius Page Block</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Side_Button__c</fullName>
        <defaultValue>&quot;5px&quot;</defaultValue>
        <label>Radius Side Button</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Side_Module__c</fullName>
        <defaultValue>&quot;0px&quot;</defaultValue>
        <label>Radius Side Module</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>